--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="10dp"
         android:text="Registration List"
         android:textSize="15sp"
-        app:cornerRadius="30dp"
+        android:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:backgroundTint="#07504F"
         android:text="Fee Details"
         android:textSize="15sp"
-        app:cornerRadius="28dp"
+        android:cornerRadius="28dp"
         app:layout_constraintBottom_toTopOf="@+id/registrationBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -46,7 +46,7 @@
         android:layout_marginBottom="24dp"
         android:text="new registration"
         android:textSize="15sp"
-        app:cornerRadius="30dp"
+        android:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/registrationListBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
